Add grid breakpoint for 480px
This is the col-ms purposal in twbs/bootstrap#10203 for v3.3.1

--- a/less/responsive-utilities.less
+++ b/less/responsive-utilities.less
@@ -26,6 +26,7 @@
 // Visibility utilities
 // Note: Deprecated .visible-xs, .visible-sm, .visible-md, and .visible-lg as of v3.2.0
 .visible-xs,
+.visible-ms,
 .visible-sm,
 .visible-md,
 .visible-lg {
@@ -35,6 +36,9 @@
 .visible-xs-block,
 .visible-xs-inline,
 .visible-xs-inline-block,
+.visible-ms-block,
+.visible-ms-inline,
+.visible-ms-inline-block,
 .visible-sm-block,
 .visible-sm-inline,
 .visible-sm-inline-block,
@@ -64,6 +68,27 @@
 }
 .visible-xs-inline-block {
   @media (max-width: @screen-xs-max) {
+    display: inline-block !important;
+  }
+}
+
+.visible-ms {
+  @media (min-width: @screen-ms-min) and (max-width: @screen-ms-max) {
+    .responsive-visibility();
+  }
+}
+.visible-ms-block {
+  @media (min-width: @screen-ms-min) and (max-width: @screen-ms-max) {
+    display: block !important;
+  }
+}
+.visible-ms-inline {
+  @media (min-width: @screen-ms-min) and (max-width: @screen-ms-max) {
+    display: inline !important;
+  }
+}
+.visible-ms-inline-block {
+  @media (min-width: @screen-ms-min) and (max-width: @screen-ms-max) {
     display: inline-block !important;
   }
 }
@@ -133,6 +158,11 @@
 
 .hidden-xs {
   @media (max-width: @screen-xs-max) {
+    .responsive-invisibility();
+  }
+}
+.hidden-ms {
+  @media (min-width: @screen-ms-min) and (max-width: @screen-ms-max) {
     .responsive-invisibility();
   }
 }
