--- a/less/grid.less
+++ b/less/grid.less
@@ -55,6 +55,15 @@
 
 .make-grid(xs);
 
+// Mid small grid
+//
+// Columns, offsets, pushes, and pulls for extra small devices like
+// smartphones.
+
+@media (min-width: @screen-ms-min) {
+  .make-grid(ms);
+}
+
 
 // Small grid
 //
